RESOLVED FIXED61944
Canvas/V8: Fix setting strokeStyle or fillStyle to a CSS system color.
https://bugs.webkit.org/show_bug.cgi?id=61944
Summary Canvas/V8: Fix setting strokeStyle or fillStyle to a CSS system color.
Andreas Kling
Reported 2011-06-02 11:07:12 PDT
canvas/philip/tests/2d.fillStyle.parse.system.html is currently skipped for chromium. Fixing it looks pretty trivial, speculative patch incoming..
Attachments
Proposed patch (4.60 KB, patch)
2011-06-02 11:10 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2011-06-02 11:10:47 PDT
Created attachment 95778 [details] Proposed patch
James Robinson
Comment 2 2011-06-02 11:18:50 PDT
Comment on attachment 95778 [details] Proposed patch R=me
Andreas Kling
Comment 3 2011-06-02 11:27:33 PDT
Comment on attachment 95778 [details] Proposed patch Clearing flags on attachment: 95778 Committed r87933: <http://trac.webkit.org/changeset/87933>
Andreas Kling
Comment 4 2011-06-02 11:27:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.