2011-06-02  Andreas Kling  <kling@webkit.org>

Reviewed by James Robinson.

        Canvas/V8: Fix setting strokeStyle or fillStyle to a CSS system color.
        https://bugs.webkit.org/show_bug.cgi?id=61944

        * platform/chromium/test_expectations.txt: Unskip canvas/philip/tests/2d.fillStyle.parse.system.html.
2011-06-02  Andreas Kling  <kling@webkit.org>

        Reviewed by James Robinson.

        Canvas/V8: Fix setting strokeStyle or fillStyle to a CSS system color.
        https://bugs.webkit.org/show_bug.cgi?id=61944

        Call setFillColor/setStrokeColor (instead of setFillStyle/setStrokeStyle)
        for string styles. This ensures that system color resolution is performed,
        and matches what the JSC bindings do.

        Test: canvas/philip/tests/2d.fillStyle.parse.system.html

        * bindings/v8/custom/V8CanvasRenderingContext2DCustom.cpp:
        (WebCore::toCanvasStyle):
        (WebCore::V8CanvasRenderingContext2D::strokeStyleAccessorSetter):
        (WebCore::V8CanvasRenderingContext2D::fillStyleAccessorSetter):


Canonical link: https://commits.webkit.org/77409@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87933 268f45cc-cd09-0410-ab3c-d52691b4dbfc